--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,4 @@
 server.properties=8080
 
 spring.data.mongodb.uri=mongodb+srv://admin:Q7Qu9hAgUzMeVnU4@pep-storage.o8fzdeu.mongodb.net/pep-db?retryWrites=true&w=majority
-
-
+spring.data.mongodb.database=Profiles
